DuPont DevSB/src/objects/appirio_core__Locale_Label__c.object
<CustomObject>
    <description>An object to support language translation for certain non Visualforce components within FinancialForce PSA.</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>appirio_core__Bundle_Name__c</fullName>
        <label>Bundle Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>controls</fullName>
                </value>
                <value>
                    <fullName>formatters</fullName>
                </value>
                <value>
                    <fullName>planner</fullName>
                </value>
                <value>
                    <fullName>SharedResources</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>appirio_core__Is_Framework_Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Framework Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>appirio_core__Locale__c</fullName>
        <label>Locale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en_US</fullName>
                </value>
                <value>
                    <fullName>es_ES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>appirio_core__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Locale Label</label>
    <listViews>
        <fullName>appirio_core__All</fullName>
        <columns>appirio_core__Locale__c</columns>
        <columns>appirio_core__Bundle_Name__c</columns>
        <columns>NAME</columns>
        <columns>appirio_core__Value__c</columns>
        <columns>appirio_core__Is_Framework_Bundle__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locale Labels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>appirio_core__Check_Spaces</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS( Name , &quot; &quot;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Name cannot contain spaces</errorMessage>
    </validationRules>
</CustomObject>